<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.trackr.ui.edit.TaskEditViewModel" />

        <variable
            name="clock"
            type="java.time.Clock" />

    </data>

    <LinearLayout

        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Star / Title -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:labelFor="@id/title"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/spacing_huge"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title"
            style="@style/Widget.Trackr.TextView.Label.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_huge"
            android:autofillHints="title"
            android:inputType="textMultiLine|textCapSentences"
            android:text="@={viewModel.title}"
            tools:text="Calendar design" />

        <!-- Description -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:labelFor="@id/description"
            android:text="@string/description"
            app:drawableStartCompat="@drawable/ic_description" />

        <EditText
            android:id="@+id/description"
            style="@style/Widget.Trackr.TextView.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:layout_marginStart="@dimen/spacing_huge"
            android:layout_marginTop="@dimen/spacing_medium"
            android:autofillHints="description"
            android:inputType="textMultiLine|textCapSentences"
            android:text="@={viewModel.description}"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />

        <!-- Status -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:labelFor="@id/status"
            android:text="@string/status"
            app:drawableStartCompat="@drawable/ic_status" />

        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_huge"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/status_spinner_background"
            tools:listitem="@layout/status_spinner_item" />

        <!-- Owner -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:importantForAccessibility="no"
            android:text="@string/owner"
            app:drawableStartCompat="@drawable/ic_person" />

        <com.google.android.material.chip.Chip
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_huge"
            android:text="@{viewModel.owner.username}"
            android:textAppearance="?textAppearanceBody1"
            app:chipIconResource="@{viewModel.owner.avatar.drawableResId}"
            app:clickActionLabel="@{@string/change}"
            tools:chipIcon="@drawable/ic_user"
            tools:text="Daring Dove" />

        <!-- Creator is not editable, so it is not displayed on this screen -->

        <!-- Due date -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:importantForAccessibility="no"
            android:text="@string/due_at"
            app:drawableStartCompat="@drawable/ic_due_at" />

        <TextView
            android:id="@+id/due_at"
            style="@style/Widget.Trackr.TextView.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_huge"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:minHeight="@dimen/min_touch_target"
            app:clickActionLabel="@{@string/change}"
            app:clock="@{clock}"
            app:formattedDate="@{viewModel.dueAt}"
            tools:text="Sept 2, 2020 (Wed)" />

        <!-- Creation date isn't editable, so it is not displayed on this screen -->

        <!-- Tags -->

        <TextView
            style="@style/Widget.Trackr.TextView.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/tags"
            app:drawableStartCompat="@drawable/ic_tags" />

        <FrameLayout
            android:id="@+id/tag_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_huge"
            android:foreground="?attr/selectableItemBackground">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showAllTags="@{true}"
                app:tags="@{viewModel.tags}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/min_touch_target"
                android:text="@string/add_tags"
                android:textAppearance="?textAppearanceBody1"
                app:isGone="@{viewModel.tags.size() > 0}" />

        </FrameLayout>

    </LinearLayout>

</layout>
